# carrot

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  flake.nix
.cargo/: config.toml
.github/workflows/: carrot-git.yml
examples/: shm-client.rs
src/: allocator.rs  anim.rs  carrotconx.rs  client.rs  clientmem.rs  config.rs  cpu_worker.rs  dbus.rs  doctor.rs  drm.rs  ei.rs  engine.rs  format.rs  input.rs  install.rs  ipc.rs  main.rs  output.rs  pipewire.rs  portal.rs  protocol.rs  rect.rs  render.rs  shell.rs  socket.rs  spike.rs  state.rs  surface.rs  trace.rs  tree.rs  uring.rs  util.rs  xparsnip.rs  xwayland.rs
src/carrotconx/: auth.rs  wire.rs
src/client/: buffers.rs  objects.rs  tasks.rs
src/config/: default.rs  kdl.rs  lua.rs
src/config/kdl/: anims.rs  binds.rs  deco.rs  input.rs  layout.rs  misc.rs  output.rs  rules.rs
src/dbus/: logind.rs  wire.rs
src/drm/: atomic.rs  connector.rs  device.rs  sys.rs  uevent.rs
src/ei/: wire.rs
src/engine/: task.rs  wheel.rs
src/input/: cursor_theme.rs  default_keymap.rs  evdev.rs  focus.rs  keymap.rs  seat.rs
src/pipewire/: client_node.rs  pod.rs
src/portal/: cast.rs  picker.rs
src/protocol/: data_device.rs  display.rs  dmabuf.rs  ext_workspace.rs  foreign_toplevel.rs  foreign_toplevel_list.rs  globals.rs  idle.rs  image_copy_capture.rs  interfaces.rs  output.rs  pointer_constraints.rs  presentation.rs  primary_selection.rs  relative_pointer.rs  screencopy.rs  session_lock.rs  shm.rs  wire.rs
src/render/: loader.rs  renderer.rs  shaders.rs  vulkan.rs
src/shell/: layer.rs  xdg.rs
src/surface/: commit.rs  role.rs  subsurface.rs
src/tree/: dwindle.rs  float.rs  layout.rs  scrolling.rs  workspace.rs
src/uring/: ops.rs
src/uring/ops/: msg.rs
src/xparsnip/: auth.rs  conn.rs  wire.rs
src/xwayland/: xwm.rs
tools/gen-keymap/: Cargo.toml
tools/gen-keymap/src/: main.rs
tools/gen-shaders/src/: main.rs
