[package]
name = "carrot"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/carrot-wm/carrot"
description = "A pure Rust tiling Wayland compositor with zero linked C, all the way down to the kernel"
# vendor/ holds the fork sources of the taproot-* linker crates below;
# registry users never need it
exclude = ["vendor"]

[dependencies]
# origin startup + c-gull libc linked in: zero linked C. experimental-relocate
# self-relocates the static-PIE, so no ld.so while .dynsym survives for
# --export-dynamic (a dlopened lib's libc imports resolve against us).
# the taproot fork of eyra's libc stack, straight from crates.io; flip to
# path = "../taproot/eyra" while hacking on the fork itself
eyra = { package = "taproot-eyra", version = "0.22.4", features = ["experimental-relocate"] }

# no default features: no `loaded`/libloading (pulls dl* nothing defines);
# the entry comes from the icd via dlopen-rs + Entry::from_static_fn
ash = { version = "0.38", default-features = false }
# pure-rust dynamic linker: loads the mesa icd + its closure against
# taproot. the taproot forks carry the tlsdesc entry alignment fix, the
# static-TLS surplus allocator and ld.so-style dl* exports; sources live
# in vendor/, flip to path = "vendor/..." while hacking on them
dlopen-rs = { package = "taproot-dlopen-rs", version = "0.8.2" }
elf_loader = { package = "taproot-elf-loader", version = "0.14.2" }
rustix = { version = "1.1.4", features = ["net", "fs", "event", "io_uring", "mm", "param", "pipe", "time", "process"] }
kbvm = "0.1.6"

# the installer's --build-taproot inflates the fetched tarball itself
# (curl stays the only external tool); pure rust, the same inflate the
# rust compiler bundles
miniz_oxide = "0.9"

# config + ipc; all pure rust. v1-fallback stays off forever.
kdl = { version = "6", default-features = false, features = ["span"] }
piccolo = "0.3.3"
gc-arena = "0.5.3"
regex-lite = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# pins the committed shader words to their manifest; pure rust
sha2 = "0.11"

[features]
# compiles tracing probes in (see src/trace.rs); off = zero cost
trace = []

# the task state machine is not unwind safe - a panicking poll aborts
[profile.dev]
panic = "abort"

# origin self-relocates the static-PIE before relocations exist; any call left
# un-inlined in that window goes through a still-zero GOT slot and _start
# faults on entry. o3 flattens the window like the release build.
[profile.dev.package.taproot-origin]
opt-level = 3
debug-assertions = false
overflow-checks = false

[profile.release]
panic = "abort"
